<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:background="@color/white"
        android:textSize="48sp"
        android:maxLength="12" />

    <!-- Row 1 -->
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2sp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnSevenText"
            android:onClick="onDigit"
            android:layout_margin="3sp"
            tools:ignore="NestedWeights,UsingOnClickInXml" />
        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnEightText"
            android:onClick="onDigit"
            android:layout_margin="3sp"
            tools:ignore="NestedWeights,UsingOnClickInXml" />
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnNineText"
            android:onClick="onDigit"
            android:layout_margin="3sp"
            tools:ignore="NestedWeights,UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnDivideText"
            android:onClick="onOperator"
            android:layout_margin="3sp"
            tools:ignore="NestedWeights,UsingOnClickInXml"
            />


    </LinearLayout>

    <!-- Row 2 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2sp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnFourText"
            android:onClick="onDigit"
            android:layout_margin="3sp"
            tools:ignore="NestedWeights,UsingOnClickInXml" />
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnFiveText"
            android:onClick="onDigit"
            android:layout_margin="3sp"
            tools:ignore="NestedWeights,UsingOnClickInXml" />
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnSixText"
            android:onClick="onDigit"
            android:layout_margin="3sp"
            tools:ignore="NestedWeights,UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnMultiplyText"
            android:onClick="onOperator"
            android:layout_margin="3sp"
            tools:ignore="NestedWeights,UsingOnClickInXml"
            />


    </LinearLayout>

    <!-- Row 3 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2sp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnOneText"
            android:onClick="onDigit"
            android:layout_margin="3sp"
            tools:ignore="NestedWeights,UsingOnClickInXml" />
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnTwoText"
            android:onClick="onDigit"
            android:layout_margin="3sp"
            tools:ignore="NestedWeights,UsingOnClickInXml" />
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnThreeText"
            android:onClick="onDigit"
            android:layout_margin="3sp"
            tools:ignore="NestedWeights,UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnMinusText"
            android:onClick="onOperator"
            android:layout_margin="3sp"
            tools:ignore="NestedWeights,UsingOnClickInXml"
            />


    </LinearLayout>

    <!-- Row 4 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2sp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnDecimal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnDecimalText"
            android:onClick="onDecimalPoint"
            android:layout_margin="3sp"
            tools:ignore="NestedWeights,UsingOnClickInXml" />
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnZeroText"
            android:onClick="onDigit"
            android:layout_margin="3sp"
            tools:ignore="NestedWeights,UsingOnClickInXml" />
        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnClearText"
            android:onClick="onClear"
            android:layout_margin="3sp"
            tools:ignore="NestedWeights,UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnAddText"
            android:onClick="onOperator"
            android:layout_margin="3sp"
            tools:ignore="NestedWeights,UsingOnClickInXml"
            />


    </LinearLayout>

    <!-- Row 5 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2sp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btnEqualText"/>


</LinearLayout>

</LinearLayout>